--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,7 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 1rem;
 	line-height: 1.25rem;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
 }
