Feat: Add Sidebar with conversationlist

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,8 @@
-$light: #F9F9F9;
-$gray: #EBEAEB;
 $white: #FFFFFF;
-$dark: #000000;
-$primary: #f5fbff;
+$gray: #EBEAEB;
+$light: #F5FBFF;
+$dark: #011041;
+$primary: #E0F4FF;
 $secondary: #FAF2EF;
 
 @import 'scss/functions';
