--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -7,7 +7,7 @@
 		overflow-y: scroll;
 
 		li {
-			padding: 14px;
+			padding: 20px 14px;
 			position: relative;
 			border-bottom: 1px solid $gray;
 			cursor: pointer;
