--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600&display=swap');
 
 html {
 	box-sizing: border-box;
@@ -14,9 +14,7 @@ body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1rem;
-	line-height: 1.25rem;
+	font-family: 'Nunito Sans', sans-serif;
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
