--- a/src/scss/_chat.scss
+++ b/src/scss/_chat.scss
@@ -3,28 +3,40 @@
 	flex-direction: column;
 	background: $light;
 
+	.no-conversation-indicator {
+		display: grid;
+		place-items: center;
+		width: 100%;
+		height: 100%;
+	}
+
 	.messages {
 		flex: 1;
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-end;
 		padding: 10px;
+		height: calc(100% - 80px);
 
-		.message {
-			margin: 10px;
-			padding: 14px 20px 20px;
-			background: $white;
+		.simplebar-content {
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-end;
+			min-height: 100%;
 
-			.time {
-				font-weight: bold;
-				margin-bottom: 8px;
-				font-size: rem-calc(12);
-				// text-align: right;
-				color: $dark;
-			}
+			.message {
+				margin: 10px;
+				padding: 14px 20px 20px;
+				background: $white;
 
-			p {
-				font-size: rem-calc(15);
+				.time {
+					font-weight: bold;
+					margin-bottom: 8px;
+					font-size: rem-calc(12);
+					// text-align: right;
+					color: $dark;
+				}
+
+				p {
+					font-size: rem-calc(15);
+				}
 			}
 		}
 	}
