--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -1,20 +1,33 @@
 .sidebar {
 	background: $white;
 
-	ul {
-		list-style: none;
+	.conversations-list {
 		height: 100%;
-		overflow-y: scroll;
 
-		li {
+		.conversation {
+			cursor: pointer;
+			user-select: none;
+			appearance: none;
+			background: transparent;
+			border: 0;
+			display: block;
+			width: 100%;
+			text-align: left;
 			padding: 20px 14px;
 			position: relative;
 			border-bottom: 1px solid $gray;
-			cursor: pointer;
-			user-select: none;
+
 
 			&:hover,
-			&:focus,
+			&:focus {
+				background: rgba($gray, 0.5);
+			}
+
+			&:focus {
+				outline: 0;
+				border-right: 5px solid $dark;
+			}
+
 			&.active {
 				background: $gray;
 			}
